--- a/src/styles.css
+++ b/src/styles.css
@@ -1,33 +1,31 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&family=Playfair+Display:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&family=Playfair+Display:wght@400;700&display=swap");
 @import "tailwindcss";
 
-
-
 #root {
-  max-width: 1440px;
+  max-width: lg= 1440px;
   margin: 0 auto;
-  padding: 10px 120px;
+  padding: 10px lg=120px;
 }
 
 @keyframes blink {
-  0%, 100% { opacity: 1; }
-  50% { opacity: 0; }
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
 }
 
-@theme{
-   --color-mint-500: oklch(0.72 0.11 178);
-   --color-warning-stock:#D9B8C4;
-      --color-chill-blue:#4682B4;
-         --color-chill-blue-hover:#3A6A92;
-            --color-chill-price:#666;
+@theme {
+  --color-chill-delete: #d9b8c4;
+  --color-chill-blue: #4682b4;
+  --color-chill-blue-hover: #3a6a92;
+  --color-chill-price: #666;
+  --font-primary: 'Open Sans', sans-serif;
+  --font-secondary: 'Playfair Display', serif;
 }
 
 .animate-blink {
   animation: blink 1s infinite;
 }
-
-
-
-
-
