Cambios en el hero y en el componente order

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,5 +32,9 @@
 }
 
 .empty-cart {
-  background-image: url('/public/empty_cart.png');
+  background-image: url('/empty_cart.png');
+}
+
+.not-found {
+  background-image: url('/ups.png');
 }
